Migrate Integration Tests to Sling 14