@@ -32,7 +32,6 @@
   <groupId>io.wcm.caravan</groupId>
   <artifactId>io.wcm.caravan.jaxrs.integration-test.launchpad-test</artifactId>
   <version>1-SNAPSHOT</version>
-  <packaging>slingstart</packaging>
 
   <name>JAX-RS Integration Test Launchpad Test</name>
   <description>
@@ -41,110 +40,93 @@
   </description>
 
   <properties>
-    <!-- hostname for integration tests -->
-    <test.host>localhost</test.host>
+    <!-- Java version -->
+    <java.version>17</java.version>
 
-    <!--
-        Set this to true to stop mvn once the integration test Jetty instance is
-        started. Useful to manually test the integration testing webapp.
-    -->
-    <launchpad.keep.running>false</launchpad.keep.running>
+    <!-- Sling Starter version -->
+    <sling.starter.version>14-SNAPSHOT</sling.starter.version>
 
-    <!--
-      If set to "true" this will start the launchpad with standard debug options,
-      or set to a string to provide custom debug settings
-    -->
-    <launchpad.debug/>
+    <!-- start with -DkeepITServerRunning=true to allow to rerun ITs or inspect the server after the ITs have been executed there -->
+    <starter.min.bundles.count>200</starter.min.bundles.count>
+    <it.startTimeoutSeconds>60</it.startTimeoutSeconds>
   </properties>
 
   <dependencies>
 
-    <!-- Additional bundles needed by the Sling instance under test -->
+    <!-- Additional bundles needed by the Sling instance under test -->    
     <dependency>
       <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.junit.teleporter</artifactId>
-      <version>1.0.18</version>
+      <version>1.1.0</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <!-- Dependencies for the Test Build and Run -->
+    <dependency>
+        <groupId>org.apache.sling</groupId>
+        <artifactId>org.apache.sling.commons.testing</artifactId>
+        <version>2.2.0</version>
+        <scope>compile</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>junit</groupId>
+            <artifactId>junit-dep</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>asm</groupId>
+            <artifactId>asm</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.apache.jackrabbit</groupId>
+            <artifactId>jackrabbit-api</artifactId>
+          </exclusion>
+        </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.json</groupId>
+      <artifactId>jakarta.json-api</artifactId>
+      <version>2.0.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.sling</groupId>
-      <artifactId>org.apache.sling.junit.core</artifactId>
-      <version>1.0.26</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.sling</groupId>
-      <artifactId>org.apache.sling.testing.tools</artifactId>
-      <version>1.0.16</version>
-      <scope>provided</scope>
+      <groupId>org.apache.johnzon</groupId>
+      <artifactId>johnzon-core</artifactId>
+      <version>2.0.2</version>
+      <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>io.wcm.caravan</groupId>
-      <artifactId>io.wcm.caravan.jaxrs.publisher</artifactId>
-      <version>1.2.3-SNAPSHOT</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.wcm.caravan</groupId>
-      <artifactId>io.wcm.caravan.jaxrs.integration-test.sample-service-1</artifactId>
-      <version>1-SNAPSHOT</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.wcm.caravan</groupId>
-      <artifactId>io.wcm.caravan.jaxrs.integration-test.sample-service-2</artifactId>
-      <version>1-SNAPSHOT</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <!-- sling testing tools bundles requires httpclient -->
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient-osgi</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpcore-osgi</artifactId>
-      <scope>provided</scope>
-    </dependency>
-
-    <!-- actual dependencies -->
-    <dependency>
-      <groupId>io.wcm.caravan</groupId>
-      <artifactId>io.wcm.caravan.integration-test.minimal-launchpad</artifactId>
-      <version>1.2.0</version>
-      <type>slingfeature</type>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.wcm.osgi.wrapper</groupId>
-      <artifactId>io.wcm.osgi.wrapper.jersey</artifactId>
-      <version>2.27-0000</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.wcm.osgi.wrapper</groupId>
-      <artifactId>io.wcm.osgi.wrapper.hibernate-validator</artifactId>
-      <version>5.4.2-0000</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.ws.rs</groupId>
-      <artifactId>javax.ws.rs-api</artifactId>
-      <version>2.1</version>
-      <scope>provided</scope>
-    </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <scope>provided</scope>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <scope>compile</scope>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient-osgi</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore-osgi</artifactId>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
@@ -155,18 +137,18 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
-        <version>1.9.1</version>
         <executions>
+          <!-- Find free ports to run our server -->
           <execution>
             <id>reserve-network-port</id>
             <goals>
               <goal>reserve-network-port</goal>
             </goals>
-            <phase>process-resources</phase>
+            <phase>initialize</phase>
             <configuration>
               <portNames>
+                <!-- reserved port must be stored in property because it must be passed to the feature-launcher-maven-plugin -->
                 <portName>http.port</portName>
-                <portName>sling.control.port</portName>
               </portNames>
             </configuration>
           </execution>
@@ -174,8 +156,114 @@
       </plugin>
 
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
+        <groupId>org.apache.sling</groupId>
+        <artifactId>slingfeature-maven-plugin</artifactId>
+        <version>1.9.2</version>
+        <extensions>true</extensions>
+
+        <configuration>
+          <replacePropertyVariables>apache-cxf-version</replacePropertyVariables>
+          <skipAddFeatureDependencies>true</skipAddFeatureDependencies>
+          <aggregates>
+            <aggregate>
+              <classifier>app</classifier>
+              <filesInclude>*.json</filesInclude>
+              <includeArtifact>
+                <groupId>org.apache.sling</groupId>
+                <artifactId>org.apache.sling.starter</artifactId>
+                <classifier>nosample_base</classifier>
+                <version>${sling.starter.version}</version>
+                <type>slingosgifeature</type>
+              </includeArtifact>
+              <includeArtifact>
+                <groupId>org.apache.sling</groupId>
+                <artifactId>org.apache.sling.starter</artifactId>
+                <classifier>oak_persistence_sns</classifier>
+                <version>${sling.starter.version}</version>
+                <type>slingosgifeature</type>
+              </includeArtifact>
+              <includeArtifact>
+                <groupId>org.apache.sling</groupId>
+                <artifactId>org.apache.sling.starter</artifactId>
+                <classifier>junit</classifier>
+                <version>${sling.starter.version}</version>
+                <type>slingosgifeature</type>
+              </includeArtifact>
+            </aggregate>
+          </aggregates>
+          <scans>
+            <scan>
+              <includeClassifier>app</includeClassifier>
+            </scan>
+          </scans>
+        </configuration>
+        <executions>
+          <execution>
+            <id>prepare-features</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>aggregate-features</goal>
+              <goal>analyse-features</goal>
+              <goal>attach-features</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- launch the Sling instances to test -->
+      <plugin>
+        <groupId>org.apache.sling</groupId>
+        <artifactId>feature-launcher-maven-plugin</artifactId>
+        <version>1.0.0</version>
+        <configuration>
+          <launches>
+            <launch>
+              <id>sling-starter-oak-tar</id>
+              <feature>
+                <groupId>io.wcm.caravan</groupId>
+                <artifactId>io.wcm.caravan.jaxws.integration-test.launchpad-test</artifactId>
+                <version>1-SNAPSHOT</version>
+                <classifier>app</classifier>
+                <type>slingosgifeature</type>
+              </feature>
+              <launcherArguments>
+                <vmOptions>
+                  <value>--add-opens java.base/java.lang=ALL-UNNAMED</value>
+                  <value>--add-opens java.base/java.net=ALL-UNNAMED</value>
+                </vmOptions>
+                <frameworkProperties>
+                  <org.osgi.service.http.port>${http.port}</org.osgi.service.http.port>
+                  <org.apache.felix.http.jetty.responseBufferSize>5000000</org.apache.felix.http.jetty.responseBufferSize>
+                </frameworkProperties>
+              </launcherArguments>
+              <startTimeoutSeconds>${it.startTimeoutSeconds}</startTimeoutSeconds>
+            </launch>
+          </launches>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>start</goal>
+              <goal>stop</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- run the ITs -->
+      <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <systemPropertyVariables>
+            <launchpad.http.server.url>http://localhost:${http.port}</launchpad.http.server.url>
+            <starter.http.test.ports>false:${http.port}</starter.http.test.ports>
+            <starter.min.bundles.count>${starter.min.bundles.count}</starter.min.bundles.count>
+            <!-- Comma-separated list of paths to check for 200 status -->
+            <starter.check.paths>
+              /system/console/bundles,
+            </starter.check.paths>
+          </systemPropertyVariables>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -184,42 +272,6 @@
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <runOrder>alphabetical</runOrder>
-          <systemPropertyVariables>
-            <launchpad.http.server.url>http://${test.host}:${http.port}</launchpad.http.server.url>
-            <launchpad.webdav.server.url>http://${test.host}:${http.port}/${webdav.workspace.path}</launchpad.webdav.server.url>
-          </systemPropertyVariables>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.sling</groupId>
-        <artifactId>slingstart-maven-plugin</artifactId>
-        <version>1.6.0</version>
-        <extensions>true</extensions>
-        <executions>
-          <execution>
-            <id>start-container</id>
-            <goals>
-              <goal>start</goal>
-              <goal>stop</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <skipLaunchpad>${integrationtests.skip}</skipLaunchpad>
-          <usePomDependencies>true</usePomDependencies>
-          <usePomVariables>true</usePomVariables>
-          <servers>
-            <server>
-              <port>${http.port}</port>
-              <controlPort>${sling.control.port}</controlPort>
-              <contextPath>${http.base.path}</contextPath>
-              <debug>${launchpad.debug}</debug>
-            </server>
-          </servers>
-        </configuration>
       </plugin>
 
       <!-- do not deploy this hierarchy pom into maven repository -->
@@ -316,17 +368,6 @@
         <launchpad.debug>true</launchpad.debug>
         <http.port>8080</http.port>
       </properties>            
-    </profile>
-
-    <!-- Skip Integration tests on Java 17 and 21 until we upgraded to latest Sling Starter -->
-    <profile>
-      <id>skip-java17</id>
-      <activation>
-        <jdk>[17,)</jdk>
-      </activation>
-      <properties>
-        <integrationtests.skip>true</integrationtests.skip>
-      </properties>
     </profile>
 
   </profiles>
